# sistema_academico

./: Aluno.cpp  Aluno.h  CMakeLists.txt  Departamento.cpp  Departamento.h  Disciplina.cpp  Disciplina.h  Pessoa.cpp  Pessoa.h  Principal.cpp  Principal.h  Professor.cpp  Professor.h  Universidade.cpp  Universidade.h  elAluno.cpp  elAluno.h  elDepartamento.cpp  elDepartamento.h  elDisciplina.cpp  elDisciplina.h  elUniversidade.cpp  elUniversidade.h  listaAlunos.cpp  listaAlunos.h  listaDepartamentos.cpp  listaDepartamentos.h  listaDisciplinas.cpp  listaDisciplinas.h  listaUniversidades.cpp  listaUniversidades.h  main.cpp  sistema_academico.mdj  stdafx.cpp  stdafx.h
